Enable pwm0 to control beep.
Usage:

cd /sys/class/pwm/pwmchip0/
echo 0 > export
cd pwm0

echo 1000000000 > period       # 1s, 1Hz
echo 100000000 > duty_cycle    # 1ms
echo normal > polarity
echo 1 > enable                # start

--- a/arch/arm/boot/dts/exynos4412-tiny4412.dts
+++ b/arch/arm/boot/dts/exynos4412-tiny4412.dts
@@ -123,6 +123,13 @@
 	cap-mmc-highspeed;
 };
 
+&pwm {
+	pinctrl-0 = <&pwm0_out>;
+	pinctrl-names = "default";
+	samsung,pwm-outputs = <0>;
+	status = "okay";
+};
+
 &serial_0 {
 	status = "okay";
 };
