--- a/arch/arm/boot/dts/exynos4412-tiny4412.dts
+++ b/arch/arm/boot/dts/exynos4412-tiny4412.dts
@@ -15,6 +15,7 @@
 #include "exynos4412.dtsi"
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/usb4640/usb4640.h>
+#include <dt-bindings/pwm/pwm.h>
 
 / {
 	model = "FriendlyARM TINY4412 board based on Exynos4412";
@@ -89,6 +90,18 @@
 			regulator-min-microvolt = <2800000>;
 			regulator-max-microvolt = <2800000>;
 		};
+	};
+
+	bl: backlight {
+		   compatible = "pwm-backlight";
+		   pwms = <&pwm 0 1000000000 PWM_POLARITY_NORMAL>;
+		   pwm-names = "backlight";
+		   brightness-levels = <0 1 2 3 4 5 6 7 8 9 10>;
+		   default-brightness-level = <3>;
+#if 0
+		   pinctrl-0 = <&pwm0_out>;
+		   pinctrl-names = "default";
+#endif
 	};
 };
 
