--- a/arch/arm/configs/tiny4412_defconfig
+++ b/arch/arm/configs/tiny4412_defconfig
@@ -1212,7 +1212,7 @@ CONFIG_MWIFIEX_SDIO=m
 CONFIG_INPUT=y
 CONFIG_INPUT_LEDS=y
 # CONFIG_INPUT_FF_MEMLESS is not set
-# CONFIG_INPUT_POLLDEV is not set
+CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_SPARSEKMAP is not set
 CONFIG_INPUT_MATRIXKMAP=y
 
@@ -1746,6 +1746,8 @@ CONFIG_SENSORS_INA2XX=y
 # CONFIG_SENSORS_W83L786NG is not set
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
+CONFIG_SENSORS_MMA7660=y
+CONFIG_MMA7660_USE_I2C_GPIO=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 CONFIG_THERMAL_OF=y
@@ -3432,7 +3434,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-# CONFIG_DYNAMIC_DEBUG is not set
+CONFIG_DYNAMIC_DEBUG=y
 
 #
 # Compile-time checks and compiler options
